[package]
name = "macros"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

[dev-dependencies]
anyhow = "1.0.83"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }

[dependencies]
darling = "0.20.8"
proc-macro2 = "1.0.82"
# 生成代码
quote = "1.0.36"
# 解析 tokenstream
syn = { version = "2.0.61", features = ["extra-traits"] }
